--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "opsmind-ai",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "Rudra Padole",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
