--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "groq-sdk": "^0.37.0",
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
     "openai": "^6.15.0",
